always show project links on mobile, footer no longer sticky

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -54,18 +54,27 @@ a {
 	color: $white-bg;
 }
 
+.wrap {
+	min-height: 99vh;
+}
+
+.main {
+	overflow: auto;
+	padding-bottom: $footer-height;
+}
+
 footer {
-	position: fixed;
+	position: relative;
+	clear: both;
+	margin: 0;
+	margin-top: -1 * $footer-height;
 	height: $footer-height;
 	line-height: $footer-height;
-	width: 100%;
-	bottom: 0;
-	left: 0;
 	padding-right: 20px;
-	text-align: right;
 	color: #BBB;
 	background-color: #1F363D;
 	font-size: 12px;
+	text-align: right;
 }
 
 /* Portfolio Page */
@@ -137,6 +146,10 @@ footer {
 	padding-bottom: 50px;
 }
 
+.hidden {
+	display: none;
+}
+
 .project {
 	margin-bottom: 50px;
 }
@@ -164,23 +177,28 @@ footer {
 	width: 100%;
 	height: 100%;
 	opacity: 0;
+	background-color: #000;
 
-	&:hover {
-		background-color: #000;
+	&:hover, &:focus, &:active {
 		opacity: 0.9;
+	}
+
+	@include mobile {
+		opacity: 0.7;
 	}
 }
 
 .overlay-links {
 	position: absolute;
-	top: 45%;
+	top: 50%;
 	left: 50%;
-	transform: translateX(-50%);
+	transform: translate(-50%, -50%);
 
 	button {
 		width: 100px;
 		padding: 10px;
 		margin-right: 10px;
+		margin-bottom: 5px;
 		background-color: transparent;
 		border: 2px solid #FFF;
 		font-size: 18px;
